@@ -3,7 +3,19 @@ Available versions:
 <p>
 
 <ul>
+  <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3670" onClick="javascript:urchinTracker ('/downloads/v12rc2'); ">1.2 RC2 (beta)</a></li>
   <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3670" onClick="javascript:urchinTracker ('/downloads/v110'); ">1.1.0 (stable)</a></li>
+</ul>
+
+<p>
+  Alternative download locations:
+</p>
+
+<ul>
+  <li><a href="/download/sventon-1.2rc2-r836-bin.zip" onClick="javascript:urchinTracker ('/downloads/v12rc2'); ">1.2 RC2 (beta) binary</a></li>
+  <li><a href="/download/sventon-1.2rc2-r836-src.zip" onClick="javascript:urchinTracker ('/downloads/v12rc2'); ">1.2 RC2 (beta) source</a></li>
+  <li><a href="/download/sventon-1.1.0-r794-bin.zip" onClick="javascript:urchinTracker ('/downloads/v110'); ">1.1.0 (stable) binary</a></li>
+  <li><a href="/download/sventon-1.1.0-r794-src.zip" onClick="javascript:urchinTracker ('/downloads/v110'); ">1.1.0 (stable) source</a></li>
 </ul>
 
 </p>
